--- a/src/org/swaroop/jstatui/resource/log4j.properties
+++ b/src/org/swaroop/jstatui/resource/log4j.properties
@@ -1,16 +1,16 @@
 # logging configuration
-log4j.rootLogger=INFO,jstatui
+#log4j.rootLogger=INFO,jstatui
 # For Dev
-#log4j.rootLogger=INFO,console,jstatui
+log4j.rootLogger=INFO,console,jstatui
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{MMM dd, yyyy HH:mm:ss.SSS} %t %l%n%p : %m%n
 
 log4j.appender.jstatui=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.jstatui.File=/Data/logs/jstatui/jstatui.log
+#log4j.appender.jstatui.File=/Data/logs/jstatui/jstatui.log
 # For Dev
-#log4j.appender.jstatui.File=D:\\temp\\jstatui.log
+log4j.appender.jstatui.File=D:\\temp\\jstatui.log
 log4j.appender.jstatui.datePattern='.'yyyy-MM-dd
 log4j.appender.jstatui.Append=true
 log4j.appender.jstatui.layout=org.apache.log4j.PatternLayout
