--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,8 @@
 	<property name="dist" location="dist" />
 	<property name="extlib" location="WebContent/WEB-INF/lib" />
 	<property name="web.dir" value="WebContent" />
+	<property name="processor" value="org.swaroop.jstatui.annotations.processor.ColumnProcessor" />
+	<property name="generatedClassDir" value=".apt_generated" />
 
 	<property file="build.properties" />
 
@@ -66,6 +68,30 @@
 			<zipfileset dir="${build}" includes="**/*.*" />
 		</jar>
 	</target>
+	
+	<target name="gen_annotation" description="Generate Beans from annotation" depends="compile">			
+			<javac srcdir="${src}" destdir="${build}" debug="true" debuglevel="lines,vars,source">
+				<classpath>
+					<fileset dir="${extlib}">
+						<include name="*.jar" />
+					</fileset>
+				</classpath>
+				<compilerarg value="-Xlint:deprecation" />
+				<compilerarg value="-Xlint:unchecked" />
+				<compilerarg line="-processorpath ${dist}/JstatUI.jar" />
+				<compilerarg line="-processor ${processor}" />
+				<compilerarg line="-s ${generatedClassDir}" />
+			</javac>
+			<copy todir="${build}">
+				<fileset dir="${src}">
+					<include name="**/*.properties" />
+					<include name="*.xml" />
+				</fileset>
+			</copy>
+			<jar destfile="${dist}/JstatUI.jar">
+				<zipfileset dir="${build}" includes="**/*.*" />
+			</jar>
+		</target>
 
 	<target name="clean" description="clean up">
 		<!-- Delete the ${build} and ${dist} directory trees -->
@@ -74,7 +100,7 @@
 	</target>
 
 	<!-- Build a Jar out of CoreServies classes  -->
-	<target name="all" depends="clean,compile,dist" description="Complete Build">
+	<target name="all" depends="clean,compile,gen_annotation,dist" description="Complete Build">
 		<delete dir="${build}" />
 	</target>
 
