--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>jstatUI</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	<servlet>
-    <description></description>
-    <display-name>Log4jInit</display-name>
-    <servlet-name>Log4jInit</servlet-name>
-    <servlet-class>com.swaroop.jstatui.servlet.Log4jInit</servlet-class>
-    <init-param>
-      <description></description>
-      <param-name>log4j-init-file</param-name>
-      <param-value>WEB-INF/classes/com/swaroop/jstatui/resource/log4j.properties</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Log4jInit</servlet-name>
-    <url-pattern>/log4jinit</url-pattern>
-  </servlet-mapping>
+		<display-name>Log4jInit</display-name>
+		<servlet-name>Log4jInit</servlet-name>
+		<servlet-class>org.swaroop.jstatui.servlet.Log4jInit</servlet-class>
+		<init-param>
+			<param-name>log4j-init-file</param-name>
+			<param-value>WEB-INF/classes/org/swaroop/jstatui/resource/log4j.properties</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet>
+		<display-name>AjaxListner</display-name>
+		<servlet-name>AjaxListner</servlet-name>
+		<servlet-class>org.swaroop.jstatui.servlet.AjaxListner</servlet-class>
+	</servlet>
+	<servlet>
+		<display-name>Statistics JSP</display-name>
+		<servlet-name>statjsp</servlet-name>
+		<jsp-file>/WEB-INF/jsp/stats.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Log4jInit</servlet-name>
+		<url-pattern>/log4jinit</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AjaxListner</servlet-name>
+		<url-pattern>/ajax</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>statjsp</servlet-name>
+		<url-pattern>/stats</url-pattern>
+	</servlet-mapping>
 </web-app>
