--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,6 +26,13 @@
 		<servlet-name>statjsp</servlet-name>
 		<jsp-file>/WEB-INF/jsp/stats.jsp</jsp-file>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>GraphWebSocket</display-name>
+		<servlet-name>GraphWebSocket</servlet-name>
+		<servlet-class>org.swaroop.jstatui.servlet.ws.GraphWebSocket</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Log4jInit</servlet-name>
 		<url-pattern>/log4jinit</url-pattern>
@@ -37,5 +44,9 @@
 	<servlet-mapping>
 		<servlet-name>statjsp</servlet-name>
 		<url-pattern>/stats</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>GraphWebSocket</servlet-name>
+		<url-pattern>/websocket/graph</url-pattern>
 	</servlet-mapping>
 </web-app>
