--- a/src/org/swaroop/jstatui/resource/log4j.properties
+++ b/src/org/swaroop/jstatui/resource/log4j.properties
@@ -1,11 +1,11 @@
 # logging configuration
-#log4j.rootLogger=INFO,jstatui
+log4j.rootLogger=INFO,jstatui
 # For Dev
-log4j.rootLogger=INFO,console,jstatui
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{MMM dd, yyyy HH:mm:ss.SSS} %t %l%n%p : %m%n
+#log4j.rootLogger=INFO,console,jstatui
+#log4j.appender.console=org.apache.log4j.ConsoleAppender
+#log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console.layout.ConversionPattern=%d{MMM dd, yyyy HH:mm:ss.SSS} %t %l%n%p : %m%n
 
 log4j.appender.jstatui=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.jstatui.File=/Data/logs/jstatui/jstatui.log
