--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
 				<include name="**/*.jsp" />
 				<include name="**/*.gif" />
 				<include name="**/*.png" />
+				<include name="**/*.jpg" />
 				<include name="**/*.properties" />
 				<exclude name="**/_svn/**" />
 			</fileset>
